Tests/CompilerTests/negative/use-before-init.hylo
fun use<T>(x: T) {}

public fun main() {
  var x: {}
  use(x)
}
