Tests/CompilerTests/negative/use-before-init.expected
negative/use-before-init.hylo:5.3-9: error: use of uninitialized object
  use(x)
  ~~~~~~
